Spacing issue solved at Latest Deals section for mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -456,7 +456,7 @@
         max-width: 100%;
         height: auto;
     }
-
+    /* Plants Responsive Section Ended */
 
     /* Plants Lover Responsive Section Started */
     .plants-lover-section{
@@ -472,15 +472,19 @@
     }
     /* Plants Lover Responsive Section Ended */
 
-   
+    /* Latest Deals Responsive Section Started */
+    .latest-deals-text p{
+        margin-bottom: 51px;
+    }
+
     .deals{
         height: auto;
         grid-template-rows: repeat(3, 1fr);
         margin-left: auto;
         margin-right: auto;
-        /* border: 3px dashed black; */
+        border: 3px dashed red;
         justify-content: center;
-        grid-column-gap: 0px;
+        /* grid-column-gap: 0px; */
     }
 
     .bloom-plants{
@@ -499,6 +503,7 @@
     .deals-description-zabo{
     height: 201px;
     }
+    /* Latest Deals Responsive Section Ended */
 
     /* Footer Responsive Section Started */
     .form-email input{
